e2e/dev/istio-demo/usecase/canary/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mockserver
spec:
  gateways:
  - mockserver-gateway
  - mesh
  hosts:
  - mockserver
  - mockserver.com
  - www.mockserver.com
  http:
  - match:
    - headers:
        version:
          exact: v1
    route:
    - destination:
        host: mockserver
        port:
          number: 80
        subset: v1
  - match:
    - headers:
        version:
          exact: v2
    route:
    - destination:
        host: mockserver
        port:
          number: 80
        subset: v2
  - route:
    - destination:
        host: mockserver
        port:
          number: 80
        subset: v1
      weight: 1
    - destination:
        host: mockserver
        port:
          number: 80
        subset: v2
      weight: 4
